Link up course pills and fix overflow issues

--- a/src/inject/search/search.css
+++ b/src/inject/search/search.css
@@ -104,8 +104,10 @@
   padding: 3px 0 0 16px;
   width: fit-content;
   float: right;
-  overflow: hidden;
   max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .canvasplus-search-ui-results-single-result-right-breadcrumb {
